--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,22 @@
 
 @layer base {
   body {
-    @apply bg-gray-950;
+    @apply bg-blue-violet-1000;
+    @apply text-white;
+  }
+
+  h1 {
+    @apply text-xl;
+  }
+
+  h2 {
+    @apply text-lg;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    @apply font-bold;
   }
 }
